welcome.lessons.welcome.array.array667.Array667.scala.error
array667:17: error: ';' expected but ',' found.
  return cpt1, cpt2
             ^