welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  val n :Int = length
  var cpt1 :Int =0
  var cpt2 :Int =0
  for (i<- 0 to n-3){
    if (nums(i)==6){
      if (nums(i+1)==6){
        cpt1 =cpt1 +1
        
      }
      else if ( nums(i+1)==7){
        cpt2=cpt2+1
        
      }
    }
  }
  return cpt1, cpt2
}